@@ -1,6 +1,7 @@
 0.9.2
 	+ Add ebox backup directory as a shared resource to download/upload
 	  files
+	+ Create smbldap_bind.conf which contains password with mask 0600
 0.9.1
 	+ New release
 0.9
